# voxel_game

./: AGENTS.md  Cargo.toml  README.md  ideas.md
client/: Cargo.toml  README.md  index.html
client/src/: app.rs  camera.rs  crosshair.wgsl  events.rs  gpu.rs  highlight.wgsl  input.rs  lib.rs  main.rs  mesh.rs  mesher.rs  net.rs  player.rs  renderer.rs  scene.rs  shader.wgsl  sim.rs  uniform.rs  vertex.rs  world.rs
client/src/platform/: native.rs  web.rs
server/: .gitignore  Cargo.toml  README.md
server/src/: game.rs  main.rs  net.rs
shared/: .rust-analyzer.toml  Cargo.toml
shared/src/: block.rs  chunk.rs  constants.rs  lib.rs  math.rs  protocol.rs
