[package]
name = "client"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "app_core"

[dependencies]
shared = { path = "../shared" }
bytemuck = { version = "1.23.2", features = ["derive"] }
futures = "0.3.31"
glam = { version = "0.32.1", features = ["bytemuck"] }
log = "0.4.28"
web-sys = { version = "0.3.95", features = [
    "HtmlCanvasElement",
    "ResizeObserver",
    "ResizeObserverEntry",
    "DomRectReadOnly",
    "Window",
    "Document",
] }
web-time = "1.1.0"
wgpu = { version = "25.0.2", default-features = false, features = [
    "wgsl",
    "webgpu",
    "vulkan",
    "metal",
    "dx12",
] }
winit = "0.30.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
pollster = "0.4.0"
serde_json = "1.0.145"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "sync"] }
tokio-tungstenite = "0.29.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.95"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
